fix: spacings & basic bp on community-one page

--- a/src/components/EventCard/event-card.css
+++ b/src/components/EventCard/event-card.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-width: 200px;
+  min-width: 180px;
   height: 100%;
   @apply card-style;
 }
